--- a/index.html
+++ b/index.html
@@ -2004,6 +2004,22 @@
 						* https://huggingface.co/models
 						* https://huggingface.co/orel12/ggml-gpt4all-j-v1.3-groovy
 						* https://github.com/nomic-ai/gpt4all
+
+						---
+
+						### These slides
+
+						![QR](img/qr-code-slides.png)
+
+						https://maciejmalecki.github.io/gpt-4-demo/
+
+						--
+
+						### The code (on prod)
+
+						![QR](img/qr-code-commit.png)
+
+						[link](https://github.com/c64lib/gradle-retro-assembler-plugin/commit/e242f75ae6d459fd15b26890f0bba7f7c7095e48)
 					</script>
 				</section>
 			</div>
