--- a/index.html
+++ b/index.html
@@ -1985,6 +1985,16 @@
 						The test scenario writes a valid image to a file using the `C64CharsetWriter` and checks whether the resulting file has the correct size (16 bytes) and data. The `outputFile` is a temporary file that is automatically deleted when the JVM exits.
 						---
 
+						<!-- .slide: data-background-image="img/ricky-speaks.jpg" data-background-opacity="0.2"-->
+						### Conclusions
+
+						* With well structured, modularized systems, it eliminates 95% of coding already.
+						* Conversation memory saves a lot of time in specifying.
+						* Big, messy, tangled systems - still a challenge.
+						* No doubt, AI will be able to refactor such elephants into maintainable systems really soon.ccc
+
+						--
+
 						#### GPT-3.5, GPT-4 - useful use cases
 
 						* Replacement for Googling
@@ -1997,15 +2007,19 @@
 						* Migrate tech stack
 						* ...
 
-						---
+						--
 
 						### Links
 
+						* https://chat.openai.com/
 						* https://huggingface.co/models
 						* https://huggingface.co/orel12/ggml-gpt4all-j-v1.3-groovy
 						* https://github.com/nomic-ai/gpt4all
+						* https://www.deepl.com/translator
+						* https://www.deepl.com/writegit
+						* https://github.com/features/copilot
 
-						---
+						--
 
 						### These slides
 
@@ -2020,6 +2034,14 @@
 						![QR](img/qr-code-commit.png)
 
 						[link](https://github.com/c64lib/gradle-retro-assembler-plugin/commit/e242f75ae6d459fd15b26890f0bba7f7c7095e48)
+
+						--
+
+						<!-- .slide: data-background-image="img/ricky.jpg" data-background-opacity="0.5"-->
+
+						### Should I be worried: Q&A
+
+						[img source](https://www.ranker.com/list/best-ricky-quotes-trailer-park-boys/movie-and-tv-quotes)
 					</script>
 				</section>
 			</div>
