--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,8 @@
 						* With well structured, modularized systems, it eliminates 95% of coding already.
 						* Conversation memory saves a lot of time in specifying.
 						* Big, messy, tangled systems - still a challenge.
-						* No doubt, AI will be able to refactor such elephants into maintainable systems really soon.ccc
+						* No doubt, AI will be able to refactor such elephants into maintainable systems really soon.
+						* GPT-4 fails for esoteric cases (i.e. for not so well documented and used libraries and so on).
 
 						--
 
