--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 						* How would AI change my work (live)?
 						* When would that happen?
-						* Is my workplace save?
+						* Is my workplace safe?
 
 						---
 
