--- a/index.html
+++ b/index.html
@@ -2042,6 +2042,10 @@
 
 						### Should I be worried: Q&A
 
+						* How would AI change my work (live)?
+						* When would that happen?
+						* Is my workplace safe?
+
 						[img source](https://www.ranker.com/list/best-ricky-quotes-trailer-park-boys/movie-and-tv-quotes)
 					</script>
 				</section>
