--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 						GPT-4<!-- .element: class="r-fit-text" -->
 
-						### How do I stop coding?
+						### How I stopped coding?
 
 						Maciej Małecki; Capgemini, Craftsmanship, 2023<!-- .element: class="cyan"-->
 
